RESOLVED FIXED42895
[GTK] media/media-can-play-mpeg-audio.html fails
https://bugs.webkit.org/show_bug.cgi?id=42895
Summary [GTK] media/media-can-play-mpeg-audio.html fails
Philippe Normand
Reported 2010-07-23 07:26:16 PDT
Because we don't correctly advertize some mime-types in the player.
Attachments
proposed patch (3.71 KB, patch)
2010-07-23 07:32 PDT, Philippe Normand
eric.carlson: review+
Philippe Normand
Comment 1 2010-07-23 07:32:47 PDT
Created attachment 62425 [details] proposed patch
Philippe Normand
Comment 2 2010-07-25 23:42:00 PDT
Note You need to log in before you can comment on or make changes to this bug.