2010-07-23  Philippe Normand  <pnormand@igalia.com>

Reviewed by Eric Carlson.

        [GTK] media/media-can-play-mpeg-audio.html fails
        https://bugs.webkit.org/show_bug.cgi?id=42895

        Fixed advertizing of mp3, mpeg and mp4 mime-types in the player.

        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::mimeTypeCache):

LayoutTests:

2010-07-23  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Eric Carlson.

        [GTK] media/media-can-play-mpeg-audio.html fails
        https://bugs.webkit.org/show_bug.cgi?id=42895

        * platform/gtk/Skipped: Unskip fixed test.

Canonical link: https://commits.webkit.org/54864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64032 268f45cc-cd09-0410-ab3c-d52691b4dbfc